examples/nodeapp/kubernetes/nodeapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodeapp
  name: nodeapp
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: nodeapp
  type: ClusterIP
status:
  loadBalancer: {}
